--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <h2>Hi, I am Ahmed</h2>
           <div class="role-container">
             <h2 id="role" class="colorblue">Full Stack Developer<span class="cursor">|</span></h2>
-            <p>I am a Junior Full-Stack Developer. I'm currently looking for an alternation.</p>
+            <p>I am a Junior Full-Stack Developer currently seeking a work-study apprenticeship.</p>
           </div>
           <div class="social-links">
             <a href="https://www.instagram.com/amedeo_sali/" target="_blank"><img src="./Images/icons/rounded-instagram.svg" alt="Instagram"></a>
@@ -44,11 +44,11 @@
       <div class="aboutme-content">
         <h3>A bit about me</h3>
         <p>
-          "I recently graduated from an intensive bootcamp, successfully passing all examinations to earn the title of
+          I recently graduated from an intensive bootcamp, successfully passing all examinations to earn the title of
           'Application Design Developer'. I am currently seeking an apprenticeship that begins in September at
           CEFIM in Tours. This program will allow me to pursue a Web and Mobile Web Developer title over the course of a year,
           with the possibility of extending for an additional year to earn a CDA. This initial experience has opened my eyes to
-          this fascinating field that I have grown to love, and I am eager to proceed gradually to further specialize and refine my skills."
+          this fascinating field that I have grown to love, and I am eager to proceed gradually to further specialize and refine my skills.
         </p>
       </div>
 
@@ -82,12 +82,12 @@
     <section class="projects" id="projects">
       <h2 class="projects-title">My Projects</h2>
       <div class="projects-container">
-        
+
           <div class="project-card">
               <img src="./Images/nfthome.png" alt="Project Image">
               <div class="project-info">
                   <h4>Nft and B</h4>
-                  <p>Brief description of the project, highlighting the main features and technologies used.</p>
+                  <p>A Website like Airbnb made using Rails. Developed for the end of my bootcamp at 'LeWagon'</p>
                   <button onclick="window.location.href='https://github.com/Amedeo1997/nft-and-b';">See more</button>
               </div>
           </div>
@@ -96,8 +96,8 @@
             <img src="./Images/amigos.png" alt="Project Image">
             <div class="project-info">
                 <h4>Amigos</h4>
-                <p>Project made with rails allows the customer to rent an nft</p>
-                <button onclick="window.location.href='https://github.com';">See more</button>
+                <p>A Mobile app made using Rails. Developed for the end of my bootcamp at 'LeWagon'</p>
+                <button onclick="window.location.href='https://github.com/AlexLeball/AMIGOS';">See more</button>
             </div>
         </div>
 
@@ -105,8 +105,8 @@
           <img src="./Images/portfolio.png" alt="Project Image">
           <div class="project-info">
               <h4>Portfolio</h4>
-              <p>Brief description of the project, highlighting the main features and technologies used.</p>
-              <button onclick="window.location.href='https://github.com/Amedeo1997/nft-and-b';">See more</button>
+              <p>Full responsive portfolio made with HTML, JS and CSS</p>
+              <button onclick="window.location.href='https://github.com/Amedeo1997/Portfolio';">See more</button>
           </div>
       </div>
           <!-- Ripeti la struttura sopra per altri progetti -->
