added invisible and visible cards

--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
         margin: 10,
         nav: false,
         autoplay: true,
-        autoplayTimeout: 1000,  // Aumentato per ridurre la frequenza di scorrimento
-        autoplayHoverPause: true,  // Rimossa la pausa al passaggio del mouse
-        autoplaySpeed: 1000,  // Velocità dell'animazione di scorrimento
-        slideTransition: 'linear',  // Transizione continua senza accelerazioni
+        autoplayTimeout: 1000,
+        autoplayHoverPause: true,
+        autoplaySpeed: 1000,
+        slideTransition: 'linear',
         responsive: {
           0: {
             items: 1
