responsive completed for mobile and changed the font

--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Ahmed Salhi</title>
+  <title>Salhi Ahmed - Full Stack Developer</title>
+  <meta name="description" content="Salhi Ahmed, Junior Full-Stack Developer seeking a work-study apprenticeship. Explore my projects and skills in web development.">
+  <meta name="keywords" content="Ahmed Salhi, Full Stack Developer, Junior Developer, Web Development, Portfolio">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
   <link rel="apple-touch-icon" sizes="180x180" href="Images/icons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="Images/icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="Images/icons/favicon-16x16.png">
   <link rel="manifest" href="Images/icons/site.webmanifest">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Sora:wght@100..800&family=Titan+One&display=swap" rel="stylesheet">
+
 </head>
 <body>
   <header>
@@ -21,7 +28,6 @@
       <a href="#contact">Contact</a>
     </div>
   </header>
-  <main>
     <section class="profile-section" id="home">
       <div class="profile-content">
         <div class="text-content">
@@ -132,8 +138,9 @@
       </form>
     </div>
 </section>
-
-  </main>
+  <footer>
+    <p>&copy; 2024 All Rights Reserved by Ahmed Salhi.</p>
+  </footer>
   <script src="script.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
