--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 
 </head>
 <body>
+  <div id="loading-screen" class="loading-screen">
+    <div class="loader"></div>
+  </div>
+
   <header>
     <h2><strong>&lt;</strong> Salhi Ahmed <strong>/&gt;</strong></h2>
     <div class="nav-links">
@@ -127,15 +131,19 @@
     <div>
         <h3>Connect with me</h3>
         <p>Feel free to reach out to me for any inquiries or collaboration opportunities.</p>
-        <form action="sendmail.php" method="POST">
+        <form name="contact" method="POST" data-netlify="true">
           <label for="name">Name</label>
-          <input type="text" placeholder="Enter your name" id="name" name="name" required>
+          <input type="text" id="name" name="name" required>
           <label for="email">Email</label>
-          <input type="email" placeholder="Enter your email" id="email" name="email" required>
+          <input type="email" id="email" name="email" required>
           <label for="message">Message</label>
-          <textarea id="message" placeholder="Enter your message" name="message" required></textarea>
+          <textarea id="message" name="message" required></textarea>
           <button type="submit">Send</button>
-      </form>
+        </form>
+        <div style="display:none;">
+          <label>Don’t fill this out if you're human: <input name="bot-field"></label>
+        </div>
+
     </div>
 </section>
   <footer>
