--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <div>
         <h3>Connect with me</h3>
         <p>Feel free to reach out to me for any inquiries or collaboration opportunities.</p>
-        <form name="contact" method="POST" data-netlify="true">
+        <form name="contact" method="POST" data-netlify="true" action="/thank-you.html">
           <label for="name">Name</label>
           <input type="text" id="name" name="name" required>
           <label for="email">Email</label>
@@ -140,6 +140,7 @@
           <textarea id="message" name="message" required></textarea>
           <button type="submit">Send</button>
         </form>
+        
         <div style="display:none;">
           <label>Don’t fill this out if you're human: <input name="bot-field"></label>
         </div>
