--- a/thank-you.html
+++ b/thank-you.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Thank You - Salhi Ahmed</title>
-  <link rel="stylesheet" href="style.css"> <!-- Assuming you are using the same stylesheet -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
@@ -18,7 +18,7 @@
   </header>
   <section class="thank-you-section">
     <h1>Thank You!</h1>
-    <p>We have received your message and will get back to you as soon as possible.</p>
+    <p>I have received your message and will get back to you as soon as possible.</p>
     <a href="index.html" class="btn">Return Home</a>
   </section>
   <footer>
