--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
         <p>Feel free to reach out to me for any inquiries or collaboration opportunities.</p>
         <form name="contact" method="POST" data-netlify="true" action="/thank-you.html">
           <label for="name">Name</label>
-          <input type="text" id="name" name="name" required>
+          <input type="text" id="name" name="name" placeholder="Enter your name" required>
           <label for="email">Email</label>
-          <input type="email" id="email" name="email" required>
+          <input type="email" id="email" name="email" placeholder="Enter your email" required>
           <label for="message">Message</label>
-          <textarea id="message" name="message" required></textarea>
+          <textarea id="message" name="message" placeholder="Enter your message"></textarea>
           <button type="submit">Send</button>
         </form>
 
