added todolist project in projects

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               <img src="./Images/nfthome.png" alt="Project Image">
               <div class="project-info">
                   <h4>Nft and B</h4>
-                  <p>A Website like Airbnb made using Rails. Developed for the end of my bootcamp at 'LeWagon'</p>
+                  <p>A Website like Airbnb made using Rails. Developed for the end of my bootcamp at 'LeWagon'.</p>
                   <button onclick="window.location.href='https://github.com/Amedeo1997/nft-and-b';">See more</button>
               </div>
           </div>
@@ -110,7 +110,7 @@
             <img src="./Images/amigos.png" alt="Project Image">
             <div class="project-info">
                 <h4>Amigos</h4>
-                <p>A Mobile app made using Rails. Developed for the end of my bootcamp at 'LeWagon'</p>
+                <p>A Mobile app for seniors made using Rails. Developed for the end of my bootcamp at 'LeWagon'.</p>
                 <button onclick="window.location.href='https://github.com/AlexLeball/AMIGOS';">See more</button>
             </div>
         </div>
@@ -119,10 +119,19 @@
           <img src="./Images/portfolio.png" alt="Project Image">
           <div class="project-info">
               <h4>Portfolio</h4>
-              <p>Full responsive portfolio made with HTML, JS and CSS</p>
+              <p>Full responsive portfolio made with HTML, JS and CSS.</p>
               <button onclick="window.location.href='https://github.com/Amedeo1997/Portfolio';">See more</button>
           </div>
       </div>
+
+      <div class="project-card">
+        <img src="./Images/todolist.jpeg" alt="Todo list project">
+        <div class="project-info">
+            <h4>To Do List</h4>
+            <p>Full responsive To Do List made with React.</p>
+            <button onclick="window.location.href='https://masha-to-do-list.netlify.app/';">See live</button>
+        </div>
+    </div>
           <!-- Ripeti la struttura sopra per altri progetti -->
       </div>
   </section>
