--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
           <div class="item"><img src="./Images/icons/heroku.svg" alt="Heroku"></div>
           <div class="item"><img src="./Images/icons/git.svg" alt="Git"></div>
           <div class="item"><img src="./Images/icons/figma.svg" alt="Figma"></div>
+          <div class="item"><img src="./Images/icons/canva.svg" alt="Figma"></div>
 
           <!-- Aggiungi altre icone come sopra -->
         </div>
