added linux and canva icon

--- a/index.html
+++ b/index.html
@@ -77,15 +77,16 @@
           <div class="item"><img src="./Images/icons/bootstrap-plain-wordmark.svg" alt="HTML Icon"></div>
           <div class="item"><img src="./Images/icons/jquery-original-wordmark.svg" alt="CSS Icon"></div>
           <div class="item"><img src="./Images/icons/php.svg" alt="JavaScript Icon"></div>
-          <div class="item"><img src="./Images/icons/file-type-ruby.svg" alt="Ruby"></div>
-          <div class="item"><img src="./Images/icons/rails-plain-wordmark.svg" alt="Rails"></div>
+          <div class="item"><img src="./Images/icons/file-type-ruby.svg" alt="Ruby icon"></div>
+          <div class="item"><img src="./Images/icons/rails-plain-wordmark.svg" alt="Rails icon"></div>
           <div class="item"><img src="./Images/icons/python.svg" alt="CSS Icon"></div>
           <div class="item"><img src="./Images/icons/mysql-original-wordmark.svg" alt="My Sql Icon"></div>
-          <div class="item"><img src="./Images/icons/postgresql-plain-wordmark.svg" alt="Postgreql"></div>
+          <div class="item"><img src="./Images/icons/postgresql-plain-wordmark.svg" alt="Postgreql icon"></div>
           <div class="item"><img src="./Images/icons/heroku.svg" alt="Heroku"></div>
-          <div class="item"><img src="./Images/icons/git.svg" alt="Git"></div>
-          <div class="item"><img src="./Images/icons/figma.svg" alt="Figma"></div>
-          <div class="item"><img src="./Images/icons/canva.svg" alt="Figma"></div>
+          <div class="item"><img src="./Images/icons/git.svg" alt="Git icon"></div>
+          <div class="item"><img src="./Images/icons/figma.svg" alt="Figma icon"></div>
+          <div class="item"><img src="./Images/icons/canva.svg" alt="Canva icon"></div>
+          <div class="item"><img src="./Images/icons/linux.svg" alt="Linux icon"></div>
 
           <!-- Aggiungi altre icone come sopra -->
         </div>
